--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet"
-        type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -78,7 +77,15 @@
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
                     <hr class="small">
-                    <p class="lead">My name is Lawrence Wagner, I grew up in Hawaii on a coffee farm, and after studying in California and Tennessee, I finally landed in Indiana where my wife grew up. I learned in my formative years how to work hard, and how to be flexible and adjust to multiple environments. The past five years I have worked as a nurse in different critical care and procedural areas. I proved myself in every department I worked to be reliable, flexible, and efficient. Although I enjoyed nursing, I wanted to make an impact by creating new technologies and useful applications for day to day life, which drew me to computer programming. I enjoy being able to learn and challenge myself with new technologies and be a team player in order to bring a great experience for customers and users. Thank you for visiting my site and I hope to hear from you soon.   </p>
+                    <p class="lead">My name is Lawrence Wagner, I grew up in Hawaii on a coffee farm, and after studying
+                        in California and Tennessee, I finally landed in Indiana where my wife grew up. I learned in my formative
+                        years how to work hard, and how to be flexible and adjust to multiple environments. The past five
+                        years I have worked as a nurse in different critical care and procedural areas. I proved myself in
+                        every department I worked to be reliable, flexible, and efficient. Although I enjoyed nursing, I
+                        wanted to make an impact by creating new technologies and useful applications for day to day life,
+                        which drew me to computer programming. I enjoy being able to learn and challenge myself with new
+                        technologies and be a team player in order to bring a great experience for customers and users. Thank
+                        you for visiting my site and I hope to hear from you soon.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -116,7 +123,14 @@
                                 <h4>
                                     <strong>User In Mind</strong>
                                 </h4>
-                                <p>Always considering users first and accepting of constructive criticsm. Able to deescalte conflicts with resolution to bring user satisfaction.</p>
+                                <p>Always considering users first and accepting of constructive criticsm. Able to deescalte
+                                    conflicts with resolution to bring user satisfaction.If you would like a copy of my resume
+                                    it is located below.</p>
+                                <a href="https://docs.google.com/document/d/1ORD8OFISNCbdYYlZB8sLLdKl5_aVEsVHIJq0brfnnOM/edit?usp=sharing"> <span
+                                        class="fa-stack fa-1x">
+                                        <i class="fa fa-square fa-stack-2x" style="color:#28556F"></i>
+                                        <i class="fa fa-file fa-stack-1x" style="color:white"></i>
+                                    </span></a>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
@@ -257,24 +271,24 @@
                         <li>
                             <a href="https://www.linkedin.com/in/lwagner007/">
                                 <span class="fa-stack fa-2x">
-                                <i class="fa fa-square fa-stack-2x" style="color: #28556F"></i>
-                                <i class="fa fa-linkedin fa-1x" style="color:white"></i>
+                                    <i class="fa fa-square fa-stack-2x" style="color: #28556F"></i>
+                                    <i class="fa fa-linkedin fa-1x" style="color:white"></i>
                                 </span>
                             </a>
                         </li>
                         <li>
                             <a href="https://github.com/lwagn007">
                                 <span class="fa-stack fa-2x">
-                                <i class="fa fa-square fa-stack-2x" style="color:#28556F"></i>
-                                <i class="fa fa-github fa-1x" style="color:white"></i>
+                                    <i class="fa fa-square fa-stack-2x" style="color:#28556F"></i>
+                                    <i class="fa fa-github fa-1x" style="color:white"></i>
                                 </span>
                             </a>
                         </li>
                         <li>
                             <a href="mailto:lawrencewagner77@gmail.com">
                                 <span class="fa-stack fa-2x">
-                                <i class="fa fa-square fa-stack-2x" style="color:#28556F"></i>
-                                <i class="fas fa-envelope-o fa fw fa-1x" style="color:white"></i>
+                                    <i class="fa fa-square fa-stack-2x" style="color:#28556F"></i>
+                                    <i class="fas fa-envelope-o fa fw fa-1x" style="color:white"></i>
                                 </span>
                             </a>
                         </li>
