edits to portfolio

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -79,12 +78,12 @@
                     <hr class="small">
                     <p class="lead">My name is Lawrence Wagner, I grew up in Hawaii on a coffee farm, and after studying
                         in California and Tennessee, I finally landed in Indiana where my wife grew up. I learned in my formative
-                        years how to work hard, and how to be flexible and adjust to multiple environments. The past five
-                        years I have worked as a nurse in different critical care and procedural areas. I proved myself in
-                        every department I worked to be reliable, flexible, and efficient. Although I enjoyed nursing, I
+                        years how to be a <i><b>hard worker</b></i> and adjust to multiple environments. The past five
+                        years I have <i><b>worked as a nurse</b></i> in different critical care and procedural areas. I proved myself in
+                        every department I worked to be <i><b>reliable, flexible, and efficient</b></i>. Although I enjoyed nursing, I
                         wanted to make an impact by creating new technologies and useful applications for day to day life,
-                        which drew me to computer programming. I enjoy being able to learn and challenge myself with new
-                        technologies and be a team player in order to bring a great experience for customers and users. Thank
+                        which drew me to computer programming. I <i><b>enjoy</b></i> being able to <i><b>learn</b></i> and <i><b>challenge</b></i> myself with new
+                        technologies and be a <i><b>team player</b></i> in order to bring a great experience for customers and users. Thank
                         you for visiting my site and I hope to hear from you soon.</p>
                 </div>
             </div>
@@ -111,7 +110,7 @@
                                 <h4>
                                     <strong>Back End</strong>
                                 </h4>
-                                <p>.Net Framework, C#</p>
+                                <p>.Net Framework, C#, SQL</p>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
@@ -123,10 +122,9 @@
                                 <h4>
                                     <strong>User In Mind</strong>
                                 </h4>
-                                <p>Always considering users first and accepting of constructive criticsm. Able to deescalte
-                                    conflicts with resolution to bring user satisfaction.If you would like a copy of my resume
-                                    it is located below.</p>
-                                <a href="https://docs.google.com/document/d/1ORD8OFISNCbdYYlZB8sLLdKl5_aVEsVHIJq0brfnnOM/edit?usp=sharing"> <span
+                                <p>Always considering users first. <br> If you would like a copy of my resume
+                                    click below.</p>
+                                <a href="https://docs.google.com/document/d/1ctD5wWet0hTuQjwNq94D8ip67TSDPByM5F3QqDFwWe8/edit?usp=sharing"><span
                                         class="fa-stack fa-1x">
                                         <i class="fa fa-square fa-stack-2x" style="color:#28556F"></i>
                                         <i class="fa fa-file fa-stack-1x" style="color:white"></i>
@@ -189,9 +187,9 @@
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <span>Lorem Lorem Lorem Lorem Lorem</span>
+                                <span>N-Tier MVC Application</span>
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/KnowIt.PNG">
                                 </a>
                             </div>
                         </div>
