resume instead of icon

--- a/index.html
+++ b/index.html
@@ -122,13 +122,9 @@
                                 <h4>
                                     <strong>User In Mind</strong>
                                 </h4>
-                                <p>Always considering users first. <br> If you would like a copy of my resume
+                                <p>Always considering users and clients first. Agile Methodologies <br> If you would like a copy of my resume
                                     click below.</p>
-                                <a href="https://docs.google.com/document/d/1ctD5wWet0hTuQjwNq94D8ip67TSDPByM5F3QqDFwWe8/edit?usp=sharing"><span
-                                        class="fa-stack fa-1x">
-                                        <i class="fa fa-square fa-stack-2x" style="color:#28556F"></i>
-                                        <i class="fa fa-file fa-stack-1x" style="color:white"></i>
-                                    </span></a>
+                                <a href="https://docs.google.com/document/d/1ctD5wWet0hTuQjwNq94D8ip67TSDPByM5F3QqDFwWe8/edit?usp=sharing">Resume</a>
                             </div>
                         </div>
                         <div class="col-md-4 col-sm-6">
