--- a/index.html
+++ b/index.html
@@ -216,8 +216,9 @@
     </section>
 
     <!-- Contact -->
-    <section class="contact">
-        <div id="contact" class="col-md-offset-2 col-md-8">
+    <section class="contacts">
+        <div id="contact" class="col-md-offset-2 col-md-8" style="color:white">
+            <br/>
             <h2 class="text-center">Contact</h2>
             <hr class="small">
             <form action="https://formspree.io/lawrencewagner77@gmail.com" method="POST">
@@ -251,17 +252,9 @@
                     <button type="submit" class="btn btn-lg btn-black" style="background-color: #28556F; color:white">
                         <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Send Message</button>
                 </div>
-            </form>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 text-center">
+                <div class="row">
                     <br>
-                    <ul class="list-inline">
+                    <ul class="list-inline text-center">
                         <li>
                             <a href="https://www.linkedin.com/in/lwagner007/">
                                 <span class="fa-stack fa-2x">
@@ -287,12 +280,15 @@
                             </a>
                         </li>
                     </ul>
-                    <hr class="small">
                 </div>
-            </div>
+            </form>
         </div>
-        <p class="text-muted" style="padding-left: 25px"> Lawrence Wagner &copy; </p>
+    </section>
+    <!-- Footer -->
+    <footer class="text-center" style="background-color:#28556F;">
+        <span> Lawrence Wagner &copy;</span>
     </footer>
+    
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
