--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <meta charset="utf-8">
@@ -10,22 +11,12 @@
 
     <title>Lawrence Wagner</title>
 
-    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -65,7 +56,7 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>Lawrence Wagner</h1>
-            <h3>Junior Developer</h3>
+            <h3>Software Developer</h3>
         </div>
     </header>
 
@@ -78,13 +69,14 @@
                     <hr class="small">
                     <p class="lead">My name is Lawrence Wagner, I grew up in Hawaii on a coffee farm, and after studying
                         in California and Tennessee, I finally landed in Indiana where my wife grew up. I learned in my formative
-                        years how to be a <i><b>hard worker</b></i> and adjust to multiple environments. The past five
-                        years I have <i><b>worked as a nurse</b></i> in different critical care and procedural areas. I proved myself in
-                        every department I worked to be <i><b>reliable, flexible, and efficient</b></i>. Although I enjoyed nursing, I
-                        wanted to make an impact by creating new technologies and useful applications for day to day life,
-                        which drew me to computer programming. I <i><b>enjoy</b></i> being able to <i><b>learn</b></i> and <i><b>challenge</b></i> myself with new
-                        technologies and be a <i><b>team player</b></i> in order to bring a great experience for customers and users. Thank
-                        you for visiting my site and I hope to hear from you soon.</p>
+                        years how to be a <i><b>hard worker</b></i> and adjust to multiple environments. The past five years
+                        I have <i><b>worked as a nurse</b></i> in different critical care and procedural areas. I proved
+                        myself in every department I worked to be <i><b>reliable, flexible, and efficient</b></i>. Although
+                        I enjoyed nursing, I wanted to make an impact by creating new technologies and useful applications
+                        for day to day life, which drew me to computer programming. I <i><b>enjoy</b></i> being able to <i><b>learn</b></i>
+                        and <i><b>challenge</b></i> myself with new technologies and be a <i><b>team player</b></i> in order
+                        to bring a great experience for customers and users. Thank you for visiting my site and I hope to
+                        hear from you soon.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -93,7 +85,6 @@
     </section>
 
     <!-- Skills -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
     <section class="skills" id="skills">
         <div class="container">
             <div class="row text-center">
@@ -122,8 +113,8 @@
                                 <h4>
                                     <strong>User In Mind</strong>
                                 </h4>
-                                <p>Always considering users and clients first. Agile Methodologies <br> If you would like a copy of my resume
-                                    click below.</p>
+                                <p>Always considering users and clients first. Agile Methodologies <br> If you would like
+                                    a copy of my resume click below.</p>
                                 <a href="https://docs.google.com/document/d/1ctD5wWet0hTuQjwNq94D8ip67TSDPByM5F3QqDFwWe8/edit?usp=sharing">Resume</a>
                             </div>
                         </div>
@@ -206,13 +197,9 @@
                             </div>
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
                 </div>
-                <!-- /.col-lg-10 -->
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /.container -->
     </section>
 
     <!-- Contact -->
@@ -288,7 +275,7 @@
     <footer class="text-center" style="background-color:#28556F;">
         <span> Lawrence Wagner &copy;</span>
     </footer>
-    
+
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
