--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                 <h4>
                                     <strong>Front End</strong>
                                 </h4>
-                                <p>HTML5, CSS3, Razor, Bootstrap</p>
+                                <p>HTML5, CSS3, Razor, Bootstrap, Angular 6</p>
                             </div>
                         </div>
                     </div>
@@ -190,9 +190,9 @@
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <span>Lorem Lorem Lorem Lorem Lorem</span>
+                                <span>Hoosier Volunteer .Net Framework Api with Angular 6 Front End Framework</span>
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/hoosiervolunteer.PNG">
                                 </a>
                             </div>
                         </div>
