--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <span>Lorem Lorem Lorem Lorem Lorem</span>
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                <span>Hoosier Volunteer Angular 6 Framework</span>
+                                <a href="https://github.com/lwagn007/HoosierVolunteerFrontEnd301">
+                                    <img class="img-portfolio img-responsive" src="img/hoosiervolunteer.PNG">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="portfolio-item">
-                                <span>Hoosier Volunteer .Net Framework Api with Angular 6 Front End Framework</span>
-                                <a href="#">
+                                <span>Hoosier Volunteer .Net Framework Api</span>
+                                <a href="https://github.com/lwagn007/HoosierVolunteerBackend">
                                     <img class="img-portfolio img-responsive" src="img/hoosiervolunteer.PNG">
                                 </a>
                             </div>
